--- a/.github/workflows/NEWIFI-D2.yml
+++ b/.github/workflows/NEWIFI-D2.yml
@@ -39,7 +39,7 @@ jobs:
           sudo -E apt-get clean
       - name: Download lede
         run: |
-          git clone https://github.com/janethan/lede
+          git clone https://github.com/coolsnowwolf/lede
           mv ./lede/* ./
       - name: Install addons
         run: |
