--- a/.github/workflows/NEWIFI-D2.yml
+++ b/.github/workflows/NEWIFI-D2.yml
@@ -67,8 +67,8 @@ jobs:
           CONFIG_TARGET_IMAGES_GZIP=y
 
           # IPv6
-          CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
-          CONFIG_PACKAGE_ipv6helper=y
+          CONFIG_PACKAGE_dnsmasq_full_dhcpv6=n
+          CONFIG_PACKAGE_ipv6helper=n
 
           # USB support
           ONFIG_PACKAGE_kmod-usb-core=y
@@ -121,7 +121,7 @@ jobs:
           CONFIG_PACKAGE_kmod-mt7603=y
           CONFIG_PACKAGE_kmod-mt7603e=n
           CONFIG_PACKAGE_kmod-mt76x2=y
-          CONFIG_PACKAGE_kmod-mt76x2e=n
+          # CONFIG_PACKAGE_kmod-mt76x2e=n
           CONFIG_PACKAGE_hostapd-common=y
           CONFIG_PACKAGE_wpad-openssl=y
           CONFIG_PACKAGE_luci-app-mtwifi=n
@@ -140,10 +140,10 @@ jobs:
           # CONFIG_PACKAGE_kmod-rtl8xxxu=y
           
           # Tor
-          CONFIG_PACKAGE_tor=y
-          CONFIG_PACKAGE_tor-gencert=y
-          CONFIG_PACKAGE_tor-geoip=y
-          CONFIG_PACKAGE_tor-resolve=y
+          #CONFIG_PACKAGE_tor=y
+          #CONFIG_PACKAGE_tor-gencert=y
+          #CONFIG_PACKAGE_tor-geoip=y
+          #CONFIG_PACKAGE_tor-resolve=y
           
           EOF
           
