--- a/.github/workflows/NEWIFI-D2.yml
+++ b/.github/workflows/NEWIFI-D2.yml
@@ -55,6 +55,7 @@ jobs:
       - name: Costom configure file
         run: |
           sed -i 's/luci-theme-bootstrap/luci-theme-bootstrap/g' feeds/luci/collections/luci/Makefile
+          sed -i 's/192.168.1.1/192.168.100.1/g' package/base-files/files/bin/config_generate
           rm -f ./.config*
           touch ./.config
           cat >> .config <<EOF
