--- a/.github/workflows/NEWIFI-D2.yml
+++ b/.github/workflows/NEWIFI-D2.yml
@@ -70,6 +70,11 @@ jobs:
           # IPv6
           CONFIG_PACKAGE_dnsmasq_full_dhcpv6=n
           CONFIG_PACKAGE_ipv6helper=n
+          CONFIG_BUSYBOX_DEFAULT_FEATURE_IPV6=n
+          CONFIG_IPV6=n
+          CONFIG_KERNEL_IPV6=n
+
+
 
           # USB support
           ONFIG_PACKAGE_kmod-usb-core=y
@@ -96,7 +101,7 @@ jobs:
           # CONFIG_PACKAGE_luci-app-aliddns=y
           CONFIG_PACKAGE_luci-app-frpc=y
           CONFIG_PACKAGE_luci-app-hd-idle=y
-          CONFIG_PACKAGE_luci-app-meshwizard=y
+          # CONFIG_PACKAGE_luci-app-meshwizard=y
           # CONFIG_PACKAGE_luci-app-mwan3=y
           # CONFIG_PACKAGE_luci-app-mwan3helper=y
           CONFIG_PACKAGE_luci-app-rclone_INCLUDE_fuse-utils=n
@@ -110,14 +115,19 @@ jobs:
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Simple_obfs=y
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
+          CONFIG_PACKAGE_xray-core=y
+          CONFIG_PACKAGE_xray-geodata=y
           CONFIG_PACKAGE_xray-plugin=y
+          CONFIG_PACKAGE_luci-app-diskman_INCLUDE_btrfs_progs=n
+          CONFIG_PACKAGE_luci-app-diskman_INCLUDE_lsblk=n
           # CONFIG_PACKAGE_luci-app-syncdial=y
           # CONFIG_PACKAGE_luci-app-travelmate=y
           # CONFIG_PACKAGE_luci-app-ttyd=y
           # CONFIG_PACKAGE_luci-app-usb-printer=y
           # CONFIG_PACKAGE_luci-app-xlnetacc=y
           CONFIG_PACKAGE_luci-app-oaf=y
-
+          CONFIG_PACKAGE_luci-i18n-adbyby-plus-zh-cn=y
+          CONFIG_PACKAGE_luci-i18n-advanced-reboot-zh-cn=y
 
           # Open source WIFI driver
           CONFIG_PACKAGE_kmod-mt7603=y
