--- a/.github/workflows/NEWIFI-D2.yml
+++ b/.github/workflows/NEWIFI-D2.yml
@@ -57,7 +57,7 @@ jobs:
           sed -i 's/luci-theme-bootstrap/luci-theme-bootstrap/g' feeds/luci/collections/luci/Makefile
           sed -i 's/192.168.1.1/192.168.100.1/g' package/base-files/files/bin/config_generate
           sed -i 's/OpenWrt/iPhone8/g' package/base-files/files/bin/config_generate
-          sed -i 's/OpenWrt/CMCC-A281/g' package/kernel/mac80211/files/lib/wifi/mac80211.sh
+          sed -i 's/OpenWrt/CMCC/g' package/kernel/mac80211/files/lib/wifi/mac80211.sh
           rm -f ./.config*
           touch ./.config
           cat >> .config <<EOF
@@ -85,13 +85,13 @@ jobs:
           CONFIG_PACKAGE_kmod-fs-exfat=y
           
           # USPIP service
-          CONFIG_PACKAGE_kmod-usb-ohci=y
-          CONFIG_PACKAGE_usbip=y
-          CONFIG_PACKAGE_usbip-client=y
-          CONFIG_PACKAGE_usbip-server=y
+          #CONFIG_PACKAGE_kmod-usb-ohci=y
+          #CONFIG_PACKAGE_usbip=y
+          #CONFIG_PACKAGE_usbip-client=y
+          #CONFIG_PACKAGE_usbip-server=y
           
           # APP
-          CONFIG_PACKAGE_luci-app-advancedsetting=y
+          # CONFIG_PACKAGE_luci-app-advancedsetting=y
           # CONFIG_PACKAGE_luci-app-aliddns=y
           CONFIG_PACKAGE_luci-app-frpc=y
           CONFIG_PACKAGE_luci-app-hd-idle=y
@@ -139,10 +139,10 @@ jobs:
           # CONFIG_PACKAGE_kmod-rtl8xxxu=y
           
           # Tor
-          CONFIG_PACKAGE_tor=y
-          CONFIG_PACKAGE_tor-gencert=y
-          CONFIG_PACKAGE_tor-geoip=y
-          CONFIG_PACKAGE_tor-resolve=y
+          #CONFIG_PACKAGE_tor=y
+          #CONFIG_PACKAGE_tor-gencert=y
+          #CONFIG_PACKAGE_tor-geoip=y
+          #CONFIG_PACKAGE_tor-resolve=y
           
           EOF
           
