--- a/.github/workflows/NEWIFI-D2.yml
+++ b/.github/workflows/NEWIFI-D2.yml
@@ -91,7 +91,7 @@ jobs:
           #CONFIG_PACKAGE_usbip-server=y
           
           # APP
-          # CONFIG_PACKAGE_luci-app-advancedsetting=y
+          CONFIG_PACKAGE_luci-app-advancedsetting=y
           # CONFIG_PACKAGE_luci-app-aliddns=y
           CONFIG_PACKAGE_luci-app-frpc=y
           CONFIG_PACKAGE_luci-app-hd-idle=y
@@ -135,14 +135,14 @@ jobs:
           # CONFIG_PACKAGE_kmod-rtl8192de=y
           # CONFIG_PACKAGE_kmod-rtl8192se=y
           # CONFIG_PACKAGE_kmod-rtl8723bs=y
-          # CONFIG_PACKAGE_kmod-rtl8821ae=y
+          CONFIG_PACKAGE_kmod-rtl8821ae=y
           # CONFIG_PACKAGE_kmod-rtl8xxxu=y
           
           # Tor
-          #CONFIG_PACKAGE_tor=y
-          #CONFIG_PACKAGE_tor-gencert=y
-          #CONFIG_PACKAGE_tor-geoip=y
-          #CONFIG_PACKAGE_tor-resolve=y
+          CONFIG_PACKAGE_tor=y
+          CONFIG_PACKAGE_tor-gencert=y
+          CONFIG_PACKAGE_tor-geoip=y
+          CONFIG_PACKAGE_tor-resolve=y
           
           EOF
           
