--- a/.github/workflows/NEWIFI-D2.yml
+++ b/.github/workflows/NEWIFI-D2.yml
@@ -43,7 +43,7 @@ jobs:
           mv ./lede/* ./
       - name: Install addons
         run: |
-          #echo "src-git helloworld https://github.com/fw876/helloworld" >> ./feeds.conf.default
+          echo "src-git helloworld https://github.com/fw876/helloworld.git" >> ./feeds.conf.default
           echo "src-git CloudflareSpeedTest https://github.com/immortalwrt/openwrt-cdnspeedtest" >> ./feeds.conf.default
           cd package
           mkdir openwrt-packages
