--- a/.github/workflows/NEWIFI-D2.yml
+++ b/.github/workflows/NEWIFI-D2.yml
@@ -128,7 +128,7 @@ jobs:
           CONFIG_PACKAGE_pixiewps=y
           CONFIG_PACKAGE_reaver=y
           CONFIG_PACKAGE_kmod-rt2800-usb=y
-          # CONFIG_PACKAGE_kmod-rt2x00-usb=y
+          CONFIG_PACKAGE_kmod-rt2x00-usb=y
           CONFIG_PACKAGE_kmod-rtl8187=y
           # CONFIG_PACKAGE_kmod-rtl8192ce=y
           # CONFIG_PACKAGE_kmod-rtl8192cu=y
@@ -136,7 +136,7 @@ jobs:
           # CONFIG_PACKAGE_kmod-rtl8192se=y
           # CONFIG_PACKAGE_kmod-rtl8723bs=y
           # CONFIG_PACKAGE_kmod-rtl8821ae=y
-          # CONFIG_PACKAGE_kmod-rtl8xxxu=y
+          CONFIG_PACKAGE_kmod-rtl8xxxu=y
           CONFIG_PACKAGE_wireless-tools=y
           
           # Tor
