--- a/.github/workflows/NEWIFI-D2.yml
+++ b/.github/workflows/NEWIFI-D2.yml
@@ -54,8 +54,8 @@ jobs:
       - name: Costom configure file
         run: |
           sed -i 's/luci-theme-bootstrap/luci-theme-bootstrap/g' feeds/luci/collections/luci/Makefile
-          sed -i 's/192.168.1.1/192.168.88.1/g' package/base-files/files/bin/config_generate
-          sed -i 's/OpenWrt/iPhone8/g' package/base-files/files/bin/config_generate
+          sed -i 's/192.168.1.1/192.168.100.1/g' package/base-files/files/bin/config_generate
+          sed -i 's/OpenWrt/iPhone/g' package/base-files/files/bin/config_generate
           sed -i 's/OpenWrt/CMCC/g' package/kernel/mac80211/files/lib/wifi/mac80211.sh
           rm -f ./.config*
           touch ./.config
@@ -92,7 +92,7 @@ jobs:
           # APP
           CONFIG_PACKAGE_luci-app-advancedsetting=y
           # CONFIG_PACKAGE_luci-app-aliddns=y
-          CONFIG_PACKAGE_luci-app-frpc=y
+          CONFIG_PACKAGE_luci-app-frpc=n
           CONFIG_PACKAGE_luci-app-hd-idle=y
           CONFIG_PACKAGE_luci-app-meshwizard=y
           # CONFIG_PACKAGE_luci-app-mwan3=y
