--- a/.github/workflows/NEWIFI-D2.yml
+++ b/.github/workflows/NEWIFI-D2.yml
@@ -117,13 +117,13 @@ jobs:
           # CONFIG_PACKAGE_luci-app-xlnetacc=y
           CONFIG_PACKAGE_luci-app-oaf=y
           # Open source WIFI driver
-          CONFIG_PACKAGE_kmod-mt7603=y
-          CONFIG_PACKAGE_kmod-mt7603e=n
-          CONFIG_PACKAGE_kmod-mt76x2=y
+          #CONFIG_PACKAGE_kmod-mt7603=y
+          #CONFIG_PACKAGE_kmod-mt7603e=n
+          #CONFIG_PACKAGE_kmod-mt76x2=y
           # CONFIG_PACKAGE_kmod-mt76x2e=n
           CONFIG_PACKAGE_hostapd-common=y
           CONFIG_PACKAGE_wpad-openssl=y
-          CONFIG_PACKAGE_luci-app-mtwifi=n
+          CONFIG_PACKAGE_luci-app-mtwifi=y
           CONFIG_PACKAGE_luci-app-unblockmusic=n
           CONFIG_PACKAGE_pixiewps=y
           CONFIG_PACKAGE_reaver=y
