--- a/.github/workflows/NEWIFI-D2.yml
+++ b/.github/workflows/NEWIFI-D2.yml
@@ -76,7 +76,7 @@ jobs:
           CONFIG_PACKAGE_kmod-usb-storage=y
           CONFIG_PACKAGE_kmod-usb-storage-extras=y
           CONFIG_PACKAGE_automount=y
-          CONFIG_PACKAGE_sshtunnel=y
+          # CONFIG_PACKAGE_sshtunnel=y
           
           # Filesystem
           CONFIG_PACKAGE_kmod-fs-exfat=y
@@ -99,9 +99,9 @@ jobs:
           CONFIG_PACKAGE_luci-app-meshwizard=y
           # CONFIG_PACKAGE_luci-app-mwan3=y
           # CONFIG_PACKAGE_luci-app-mwan3helper=y
-          CONFIG_PACKAGE_luci-app-rclone_INCLUDE_fuse-utils=n
-          CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng=n
-          CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui=n
+          # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_fuse-utils=n
+          # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng=n
+          # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui=n
           CONFIG_PACKAGE_luci-app-samba=y
           # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
           # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
@@ -120,7 +120,7 @@ jobs:
           CONFIG_PACKAGE_luci-app-uhttpd=y
           # CONFIG_PACKAGE_luci-app-xlnetacc=y
           CONFIG_PACKAGE_luci-app-oaf=y
-          CONFIG_PACKAGE_luci-app-privoxy=y
+          # CONFIG_PACKAGE_luci-app-privoxy=y
           # Open source WIFI driver
           CONFIG_PACKAGE_kmod-mt7603=y
           CONFIG_PACKAGE_kmod-mt7603e=n
