--- a/.github/workflows/NEWIFI-D2.yml
+++ b/.github/workflows/NEWIFI-D2.yml
@@ -86,9 +86,9 @@ jobs:
           
           # USPIP service
           CONFIG_PACKAGE_kmod-usb-ohci=y
-          CONFIG_PACKAGE_usbip=y
-          CONFIG_PACKAGE_usbip-client=y
-          CONFIG_PACKAGE_usbip-server=y
+          # CONFIG_PACKAGE_usbip=y
+          # CONFIG_PACKAGE_usbip-client=y
+          # CONFIG_PACKAGE_usbip-server=y
           
           # APP
           CONFIG_PACKAGE_luci-app-adbyby-plus=y
