--- a/.github/workflows/NEWIFI-D2.yml
+++ b/.github/workflows/NEWIFI-D2.yml
@@ -16,8 +16,8 @@ on:
   push:
     branches: 
       - master
-  schedule:
-      - cron: 0 6 * * 5
+  # schedule:
+      # - cron: 0 6 * * 5
   watch:
     types: started
 
@@ -111,7 +111,7 @@ jobs:
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=y
           # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
-          # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Hysteria=y
+          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Hysteria=y
           CONFIG_PACKAGE_xray-plugin=y
           # CONFIG_PACKAGE_luci-app-syncdial=y
           # CONFIG_PACKAGE_luci-app-travelmate=y
