--- a/.github/workflows/NEWIFI-D2.yml
+++ b/.github/workflows/NEWIFI-D2.yml
@@ -109,9 +109,9 @@ jobs:
           # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Socks=y
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Simple_obfs=y
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=y
-          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
+          # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
-          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Hysteria=y
+          # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Hysteria=y
           CONFIG_PACKAGE_xray-plugin=y
           # CONFIG_PACKAGE_luci-app-syncdial=y
           # CONFIG_PACKAGE_luci-app-travelmate=y
@@ -146,10 +146,10 @@ jobs:
           CONFIG_PACKAGE_wireless-tools=y
           
           # Tor
-           CONFIG_PACKAGE_tor=y
-           CONFIG_PACKAGE_tor-gencert=y
-           CONFIG_PACKAGE_tor-geoip=y
-           CONFIG_PACKAGE_tor-resolve=y
+           # CONFIG_PACKAGE_tor=y
+           # CONFIG_PACKAGE_tor-gencert=y
+           # CONFIG_PACKAGE_tor-geoip=y
+           # CONFIG_PACKAGE_tor-resolve=y
           
           EOF
           
