--- a/.github/workflows/NEWIFI-D2.yml
+++ b/.github/workflows/NEWIFI-D2.yml
@@ -160,6 +160,7 @@ jobs:
           make download -j8
           find dl -size -1024c -exec ls -l {} \;
           find dl -size -1024c -exec rm -f {} \;- name: Compile firmware
+      - name: Compile firmware
         run: |
           echo -e "$(nproc) thread build."
           # make -j$(nproc) V=s
