--- a/.github/workflows/NEWIFI-D2.yml
+++ b/.github/workflows/NEWIFI-D2.yml
@@ -159,7 +159,7 @@ jobs:
         run: |
           make download -j8
           find dl -size -1024c -exec ls -l {} \;
-          find dl -size -1024c -exec rm -f {} \;- name: Compile firmware
+          find dl -size -1024c -exec rm -f {} \;
       - name: Compile firmware
         run: |
           echo -e "$(nproc) thread build."
