--- a/.github/workflows/NEWIFI-D2.yml
+++ b/.github/workflows/NEWIFI-D2.yml
@@ -158,6 +158,7 @@ jobs:
           grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
           [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
           echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
+
       - name : Upload artifact
         uses: actions/upload-artifact@master
         with:
@@ -179,7 +180,7 @@ jobs:
         with:
             tag_name: ${{ steps.tag.outputs.release_tag }}
             body_path: release.txt
-            files: ${{ env.FIRMWARE }}/*
+            files: ${{ env.FIRMWARE }}/bin/targets/ramips/mt7621/*in*
 
       - name: Delete workflow runs
         uses: GitRML/delete-workflow-runs@main
