--- a/.github/workflows/NEWIFI-D2.yml
+++ b/.github/workflows/NEWIFI-D2.yml
@@ -180,7 +180,8 @@ jobs:
         with:
             tag_name: ${{ steps.tag.outputs.release_tag }}
             body_path: release.txt
-            files: ${{ env.FIRMWARE }}/bin/targets/ramips/mt7621/*in*
+            #files: ${{ env.FIRMWARE }}/bin/targets/ramips/mt7621/*in*
+            files: bin/targets/ramips/mt7621/*in*
 
       - name: Delete workflow runs
         uses: GitRML/delete-workflow-runs@main
