--- a/.github/workflows/NEWIFI-D2.yml
+++ b/.github/workflows/NEWIFI-D2.yml
@@ -1,9 +1,11 @@
 name: NEWIFI-D2
 
 on:
-  push:
-    branches:
-      - master
+  #push:
+    #branches:
+      #- master
+  #schedule:
+      #- cron: 0 6 * * 5
   watch:
     types: started
   workflow_dispatch:
