--- a/.github/workflows/NEWIFI-D2.yml
+++ b/.github/workflows/NEWIFI-D2.yml
@@ -205,7 +205,7 @@ jobs:
             #body_path: release.txt  # 发行说明
             body_path: ""
             #files: ${{ env.FIRMWARE }}/bin/targets/ramips/mt7621/*in*
-            files: bin/targets/ramips/mt7621/*in*
+            files: bin/targets/ramips/mt7621/*
 
       - name: Delete workflow runs
         uses: GitRML/delete-workflow-runs@main
