--- a/.github/workflows/NEWIFI-D2.yml
+++ b/.github/workflows/NEWIFI-D2.yml
@@ -64,8 +64,8 @@ jobs:
           # Gzip
           CONFIG_TARGET_IMAGES_GZIP=y
           # IPv6
-          # CONFIG_PACKAGE_dnsmasq_full_dhcpv6=n
-          # CONFIG_PACKAGE_ipv6helper=n
+          CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
+          CONFIG_PACKAGE_ipv6helper=y
           # USB support
           CONFIG_PACKAGE_kmod-usb-core=y
           CONFIG_PACKAGE_kmod-usb3=y
